--- a/ejercicioGit/ejercicio.html
+++ b/ejercicioGit/ejercicio.html
@@ -5,5 +5,6 @@
     </head>
     <body>
         <input type="button" value="Press me" onclick="saludar();">
+        <img src="./imagenes/mono.gif"/>
     </body>
 </html>
