--- a/ejercicioGit/ejercicio.html
+++ b/ejercicioGit/ejercicio.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         <input type="button" value="Press me" onclick="saludar();">
-        <img src="./imagenes/mono.gif"/>
+        <img src="./imagenes/mono.gif" id="lblImagen"/>
     </body>
 </html>
