Quinto caso de prueba - Agregar resumen final a la cuenta

--- a/puntoDeVenta_v4/puntoDeVenta.html
+++ b/puntoDeVenta_v4/puntoDeVenta.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8">
         <script src="serviciosPuntoDeVenta.js"></script>
         <script src="puntoDeVenta.js"></script>
         <script src="utilitarios.js"></script>
@@ -22,7 +23,7 @@
         <h3 id="lblValorIVA">0.0</h3>
         <h3>Total</h3>
         <h3 id="lblTotal">0.0</h3>
-
+        <h2 id="lblResumen">Resumen</h2>
         <input type="button" value="CALCULAR TOTAL" 
         onclick="calcularValorTotal();"/>
     
