Sexto caso de prueba - Agregar botón limpiar y limpiar casillas

--- a/puntoDeVenta_v4/puntoDeVenta.html
+++ b/puntoDeVenta_v4/puntoDeVenta.html
@@ -26,6 +26,8 @@
         <h2 id="lblResumen">Resumen</h2>
         <input type="button" value="CALCULAR TOTAL" 
         onclick="calcularValorTotal();"/>
+        <input type="button" value="LIMPIAR" 
+        onclick="limpiar();"/>
     
     </body> 
 </html>
