Se agregaron los gif de éxito y fracaso

--- a/promedioNotas/promedioNotas.html
+++ b/promedioNotas/promedioNotas.html
@@ -20,6 +20,8 @@
             <input type="text" id="lblNota3"/>
         </div>
         <h1 id="lblPromedio">Ingrese las notas</h1>
+        <img id="lblImagen" src="./imagenes/suspenso.gif" height="200px" />
+        <p></p>
         <input type="button" value="CALCULAR" onclick="calcularPromedioNotas();">
     </body>
 </html>
