--- a/promedioNotas/promedioNotas.html
+++ b/promedioNotas/promedioNotas.html
@@ -21,6 +21,7 @@
         </div>
         <h1 id="lblPromedio">Ingrese las notas</h1>
         <img id="lblImagen" src="./imagenes/suspenso.gif" height="200px" />
+        <h2 id="lblMensaje"></h2>
         <p></p>
         <input type="button" value="CALCULAR" onclick="calcularPromedioNotas();">
     </body>
