--- a/puntoDeVentaV2/puntoDeVenta.html
+++ b/puntoDeVentaV2/puntoDeVenta.html
@@ -9,12 +9,13 @@
     <body>
         <h3>Ingrese el nombre del producto</h3>
         <input type="text" id="txtProducto"/>
-        <div id="lblErrorNombre"></div>
+        <div id="lblErrorProducto"></div>
         <h3>Ingrese la cantidad a comprar</h3>
         <input type="text" id="txtCantidad"/>
         <div id="lblErrorCantidad"></div>
         <h3>Ingrese el precio del producto</h3>
         <input type="text" id="txtPrecio"/>
+        <div id="lblErrorPrecio"></div>
         <h3>Subtotal</h3>
         <h3 id="lblSubtotal">0.0</h3>
         <h3>Descuento</h3>
