Primera parte terminadad

--- a/placas/placas.html
+++ b/placas/placas.html
@@ -18,6 +18,9 @@
                     <img src="./img/placaUndefined.png" width="200px" class="lblImgPlaca" id="lblImgPlaca">
                     <div class="lblErrores" id="lblErrores"></div>
                 </div>
+                <div class="bloqueValidar">
+                    <div class="lblErrores" id="lblErrores"></div>
+                </div>
                 <div class="botonera">
                     <input type="button" value="VALIDAR" class="boton" onclick="validarPlaca();">
                 </div>
