--- a/placas/placas.html
+++ b/placas/placas.html
@@ -17,9 +17,16 @@
                 <div class="bloqueValidar">
                     <img src="./img/placaUndefined.png" width="200px" class="lblImgPlaca" id="lblImgPlaca">
                     <div class="lblErrores" id="lblErrores"></div>
-                </div>
-                <div class="bloqueValidar">
-                    <div class="lblErrores" id="lblErrores"></div>
+                    <div>-------------------------------------------------------</div>
+                    <div class="datos">
+                        <div class="nombreDato">
+                            <div>Provincia:</div>
+                        </div>
+                        <div class="resultadoDato">
+                            <div id="lblProvincia">N/A</div>
+                        </div>
+                    </div>
+                    
                 </div>
                 <div class="botonera">
                     <input type="button" value="VALIDAR" class="boton" onclick="validarPlaca();">
