Se agregó la funcionalidad de validar y mostrar el tipo de vehículo

--- a/placas/placas.html
+++ b/placas/placas.html
@@ -20,10 +20,12 @@
                     <div>-------------------------------------------------------</div>
                     <div class="datos">
                         <div class="nombreDato">
-                            <div>Provincia:</div>
+                            <div class="item">Provincia:</div>
+                            <div class="item">Tipo de vehiculo:</div>
                         </div>
                         <div class="resultadoDato">
-                            <div id="lblProvincia">N/A</div>
+                            <div id="lblProvincia" class="item">N/A</div>
+                            <div id="lblTipoVehiculo" class="item">N/A</div>
                         </div>
                     </div>
                     
