Se agregó función Pico y Placa y se agregaron pruebas

--- a/placas/placas.html
+++ b/placas/placas.html
@@ -22,10 +22,12 @@
                         <div class="nombreDato">
                             <div class="item">Provincia:</div>
                             <div class="item">Tipo de vehiculo:</div>
+                            <div class="item">Pico y Placa:</div>
                         </div>
                         <div class="resultadoDato">
                             <div id="lblProvincia" class="item">N/A</div>
                             <div id="lblTipoVehiculo" class="item">N/A</div>
+                            <div id="lblPicoYPlaca" class="item">N/A</div>
                         </div>
                     </div>
                     
