--- a/placas/placas.html
+++ b/placas/placas.html
@@ -34,6 +34,7 @@
                 </div>
                 <div class="botonera">
                     <input type="button" value="VALIDAR" class="boton" onclick="validarPlaca();">
+                    <input type="button" value="LIMPIAR" class="boton" onclick="limpiar();">
                 </div>
             </div>
         </div>
