Se agregó la puntuación y la visualización de la misma

--- a/juego/juego.html
+++ b/juego/juego.html
@@ -21,8 +21,8 @@
                 </div>
                 <div class="botonYPuntuacion">
                     <div class="puntuacionBox">
-                        <!--<div class="tituloPuntaje">JUGADOR</div>
-                        <div class="valorPuntaje">1</div>-->
+                        <div class="valorPuntaje" id="puntajeJugador">0</div>
+                        <div class="tituloPuntaje">JUGADOR</div>
                     </div>
                     <div class="botonera">
                         <div class="botonBox">
@@ -35,7 +35,10 @@
                             <img src="./imagenes/botonTijera.png" class="imgBoton" onclick="jugar('Tijera')" />
                         </div>
                     </div>
-                    <div class="puntuacionBox"></div>
+                    <div class="puntuacionBox">
+                        <div class="tituloPuntaje">COMPUTADOR</div>
+                        <div class="valorPuntaje" id="puntajeComputador">0</div>
+                    </div>
                 </div>
             </div>
         </div>
