Se agregaron las puntuaciones y validaciones de que se detenga al puntaje 5

--- a/juego/juego.html
+++ b/juego/juego.html
@@ -40,6 +40,9 @@
                         <div class="valorPuntaje" id="puntajeComputador">0</div>
                     </div>
                 </div>
+                <!--<div class="cajaBtnLimpiar">
+                    <input type="button" value="NUEVA PARTIDA" onclick="limpiar();" class="btnLimpiar">
+                </div>-->
             </div>
         </div>
     </body>
