Se agregó el botón de limpiar con su función y se estilizó la página

--- a/juego/juego.html
+++ b/juego/juego.html
@@ -21,8 +21,8 @@
                 </div>
                 <div class="botonYPuntuacion">
                     <div class="puntuacionBox">
-                        <div class="valorPuntaje" id="puntajeJugador">0</div>
-                        <div class="tituloPuntaje">JUGADOR</div>
+                        <div class="valorPuntajePj" id="puntajeJugador">0</div>
+                        <div class="tituloPuntajePj">JUGADOR</div>
                     </div>
                     <div class="botonera">
                         <div class="botonBox">
@@ -36,13 +36,13 @@
                         </div>
                     </div>
                     <div class="puntuacionBox">
-                        <div class="tituloPuntaje">COMPUTADOR</div>
-                        <div class="valorPuntaje" id="puntajeComputador">0</div>
+                        <div class="tituloPuntajePc">COMPUTADOR</div>
+                        <div class="valorPuntajePc" id="puntajeComputador">0</div>
                     </div>
                 </div>
-                <!--<div class="cajaBtnLimpiar">
+                <div class="cajaBtnLimpiar">
                     <input type="button" value="NUEVA PARTIDA" onclick="limpiar();" class="btnLimpiar">
-                </div>-->
+                </div>
             </div>
         </div>
     </body>
