--- a/test/test.html
+++ b/test/test.html
@@ -1,11 +1,10 @@
-<html lang="en">
+<!DOCTYPE html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
     <script src="test.js"></script>
 </head>
 <body>
-    <input type="button" value="botoncito" onclick="probar()">
+    <input type="text" id="lblPassword">
+    <div id="lblResultado"></div>
+    <input type="button" value="PROBAR" onclick="validarPassword();">
 </body>
 </html>
