Reto 42 - Numeros aleatorios completado

--- a/aleatorios/aleatorios.html
+++ b/aleatorios/aleatorios.html
@@ -5,6 +5,9 @@
     <script src="utilitarios.js"></script>
 </head>
 <body>
+    <input type="text" id="txtNum">
+    <input type="button" value="ALEATORIO" onclick="generarAleatorios()">
+    <div id="lblNum"></div>
     
 </body>
 </html>
