--- a/test/test.html
+++ b/test/test.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <head>
     <script src="test.js"></script>
+    <script src="prueba2.js"></script>
+    <script src="prueba3.js"></script>
 </head>
 <body>
-    <input type="text" id="lblPassword">
-    <div id="lblResultado"></div>
-    <input type="button" value="PROBAR" onclick="validarPassword();">
+    <input type="button" value="PROBAR" onclick="prueba();">
 </body>
 </html>
