--- a/objetos/objetos.html
+++ b/objetos/objetos.html
@@ -4,7 +4,11 @@
     <script src="objetos.js"></script>
 </head>
 <body>
-    <input type="button" value="Prueba1" onclick="probarAtributos()">
+    <input type="button" value="Prueba 1" onclick="probarAtributos()">
     <input type="button" value="Prueba Tarea" onclick="crearProducto()">
+    <input type="button" value="Prueba 2" onclick="modificarAtributos()">
+    <input type="button" value="Prueba 3" onclick="crearCliente()">
+    <input type="button" value="Prueba 4" onclick="probarIncrementoSaldo()">
+    <input type="button" value="Prueba 5" onclick="probarDeterminarMayor()">
 </body>
 </html>
