--- a/roles/roles.html
+++ b/roles/roles.html
@@ -34,6 +34,7 @@
                 </div>
                 <div class="contenedorBoton">
                     <input type="button" value="BUSCAR" class="estiloBoton" />
+                    <input type="button" value="PRUEBA" class="estiloBoton" onclick="mostrarEmpleados()"/>
                 </div>
             </div>
 
