--- a/roles/roles.html
+++ b/roles/roles.html
@@ -34,7 +34,7 @@
                 </div>
                 <div class="contenedorBoton">
                     <input type="button" value="BUSCAR" class="estiloBoton" />
-                    <input type="button" value="PRUEBA" class="estiloBoton" onclick="guardar()"/>
+                    <input type="button" value="PRUEBA" class="estiloBoton" onclick=""/>
                 </div>
             </div>
 
@@ -80,7 +80,7 @@
                         <input type="button" value="NUEVO" class="estiloBoton" onclick="ejecutarNuevo()" />
                     </div>
                     <div class="contenedorBoton">
-                        <input type="button" value="GUARDAR" class="estiloBoton" id="btnGuardar" />
+                        <input type="button" value="GUARDAR" class="estiloBoton" id="btnGuardar" onclick="guardar()"/>
                     </div>
                     <div class="contenedorBoton">
                         <input type="button" value="LIMPIAR" class="estiloBoton"  />
