--- a/roles/roles.html
+++ b/roles/roles.html
@@ -173,7 +173,7 @@
                 </div>
             </div>
             <div class="logoEscuela">
-                <img src="./imagenes/rol.jpg" width="80%" />
+                <img src="./imagenes/rol.gif" width="80%" />
             </div>
         </div>
     </div>
@@ -212,7 +212,7 @@
                 </div>
             </div>
             <div class="logoEscuela">
-                <img src="./imagenes/resumen.jpg" width="80%" />
+                <img src="./imagenes/resumen.gif" width="80%" />
             </div>
         </div>
     </div>
