Se agregó la función de modificar un empleado existente

--- a/test/test.html
+++ b/test/test.html
@@ -5,6 +5,7 @@
     <script src="prueba3.js"></script>
 </head>
 <body>
+    <input type="text" id="txtCaja">
     <input type="button" value="PROBAR" onclick="prueba();">
 </body>
 </html>
