Se agregaron las funciones de los roles, hasta GUARDAR ROL

--- a/roles/roles.html
+++ b/roles/roles.html
@@ -20,6 +20,7 @@
         </div>
 
     </div>
+<!-- EMPLEADO -->
     <div id="divEmpleado">
         <div class="principal">
             <div class="area">
@@ -94,6 +95,7 @@
             </div>
         </div>
     </div>
+<!-- ROL -->
     <div id="divRol">
         <div class="principal">
             <div class="area">
@@ -168,7 +170,7 @@
                 </div>
                 <div class="botones">
                     <div class="contenedorBoton">
-                        <input type="button" value="GUARDAR" class="estiloBoton" />
+                        <input type="button" value="GUARDAR" class="estiloBoton" id="btnGuardarRol" onclick="guardarRol()" />
                     </div>
                 </div>
             </div>
@@ -177,6 +179,7 @@
             </div>
         </div>
     </div>
+<!-- RESUMEN -->
     <div id="divResumen">
         <div class="principal">
             <div class="area">
