Se está desarrollando la funcion mostrarTotales

--- a/roles/roles.html
+++ b/roles/roles.html
@@ -187,7 +187,7 @@
             </div>
             <div class="area">
                 <div id="tablaResumen" class="areaTabla">
-
+                    <!-- AQUI VA LA TABLA -->
                 </div>
                 <div class="ingresoDatos">
                     <div class="tituloCampo">
@@ -211,6 +211,7 @@
                     </div>
                     <div>
                         <div class="info" id="infoAporteEmpleado">0.0</div>
+                        <input type="button" value="probar" onclick="mostrarRoles()">
                     </div>
                 </div>
             </div>
