Se agregó la variable y el div de TOTAL NOMINA

--- a/roles/roles.html
+++ b/roles/roles.html
@@ -191,7 +191,7 @@
                 </div>
                 <div class="ingresoDatos">
                     <div class="tituloCampo">
-                        TOTAL A PAGAR
+                        TOTAL A PAGAR:
                     </div>
                     <div>
                         <div class="info" id="infoTotalPago">0.0</div>
@@ -199,7 +199,7 @@
                 </div>
                 <div class="ingresoDatos">
                     <div class="tituloCampo">
-                        APORTE EMPRESA
+                        APORTE EMPRESA:
                     </div>
                     <div>
                         <div class="info" id="infoAporteEmpresa">0.0</div>
@@ -207,10 +207,18 @@
                 </div>
                 <div class="ingresoDatos">
                     <div class="tituloCampo">
-                        APORTE EMPLEADO
+                        APORTE EMPLEADO:
                     </div>
                     <div>
                         <div class="info" id="infoAporteEmpleado">0.0</div>
+                    </div>
+                </div>
+                <div class="ingresoDatos">
+                    <div class="tituloCampo" style="font-weight: 700">
+                        TOTAL NOMINA:
+                    </div>
+                    <div>
+                        <div class="info" id="infoTotalNomina" style="font-weight: 700">0.0</div>
                     </div>
                 </div>
             </div>
