Se agregaron los cursos de la empresa

--- a/krakedevpage/index.html
+++ b/krakedevpage/index.html
@@ -134,20 +134,20 @@
                     <img class="img-fluid w-100" src="img/about.jpg" alt="">
                 </div>
                 <div class="col-lg-6">
-                    <h6 class="d-inline-block text-primary text-uppercase bg-light py-1 px-2">About Us</h6>
-                    <h1 class="mb-4">Your Best Spa, Beauty & Skin Care Center</h1>
-                    <p class="pl-4 border-left border-primary">Dolores lorem lorem ipsum sit et ipsum. Sadip sea amet diam dolore sed et. Sit rebum labore sit sit ut vero no sit. Et elitr stet dolor sed sit et sed ipsum et kasd erat duo eos et erat</p>
+                    <h6 class="d-inline-block text-primary text-uppercase bg-light py-1 px-2">EXPERIENCIA</h6>
+                    <h1 class="mb-4">Tecnologías de vanguardia para el desarrollo de software</h1>
+                    <p class="pl-4 border-left border-primary">La escuela se enfoca en enseñar habilidades prácticas y aplicables al campo laboral. Además, ofrece una gran cantidad de recursos y herramientas para sus estudiantes acompñados proyectos y tareas prácticas</p>
                     <div class="row pt-3">
                         <div class="col-6">
                             <div class="bg-light text-center p-4">
-                                <h3 class="display-4 text-primary" data-toggle="counter-up">99</h3>
-                                <h6 class="text-uppercase">Spa Specialist</h6>
+                                <h3 class="display-4 text-primary" data-toggle="counter-up">25</h3>
+                                <h6 class="text-uppercase">Certificaciones</h6>
                             </div>
                         </div>
                         <div class="col-6">
                             <div class="bg-light text-center p-4">
-                                <h3 class="display-4 text-primary" data-toggle="counter-up">999</h3>
-                                <h6 class="text-uppercase">Happy Clients</h6>
+                                <h3 class="display-4 text-primary" data-toggle="counter-up">350</h3>
+                                <h6 class="text-uppercase">Estudiantes</h6>
                             </div>
                         </div>
                     </div>
@@ -162,68 +162,58 @@
     <div class="container-fluid px-0 py-5 my-5">
         <div class="row mx-0 justify-content-center text-center">
             <div class="col-lg-6">
-                <h6 class="d-inline-block bg-light text-primary text-uppercase py-1 px-2">Our Service</h6>
-                <h1>Spa & Beauty Services</h1>
+                <h6 class="d-inline-block bg-light text-primary text-uppercase py-1 px-2">Nuestros Cursos</h6>
+                <h1>Certificaciones</h1>
             </div>
         </div>
         <div class="owl-carousel service-carousel">
             <div class="service-item position-relative">
-                <img class="img-fluid" src="img/service-1.jpg" alt="">
+                <img class="img-fluid" src="img/item1.jpg" alt="">
                 <div class="service-text text-center">
-                    <h4 class="text-white font-weight-medium px-3">Body Massage</h4>
-                    <p class="text-white px-3 mb-3">Elitr labore sit dolor erat est lorem diam sea ipsum diam dolor duo sit ipsum</p>
+                    <h4 class="text-white font-weight-medium px-3">JavaScript</h4>
+                    <p class="text-white px-3 mb-3">Lenguaje de secuencia de comandos para crear páginas web complejas</p>
                     <div class="w-100 bg-white text-center p-4" >
-                        <a class="btn btn-primary" href="">Make Order</a>
+                        <a class="btn btn-primary" href="">Comprar</a>
                     </div>
                 </div>
             </div>
             <div class="service-item position-relative">
-                <img class="img-fluid" src="img/service-2.jpg" alt="">
+                <img class="img-fluid" src="img/item2.jpg" alt="">
                 <div class="service-text text-center">
-                    <h4 class="text-white font-weight-medium px-3">Stone Therapy</h4>
-                    <p class="text-white px-3 mb-3">Elitr labore sit dolor erat est lorem diam sea ipsum diam dolor duo sit ipsum</p>
+                    <h4 class="text-white font-weight-medium px-3">Java 8</h4>
+                    <p class="text-white px-3 mb-3">Utilizado para crear software compatible con variedad de sistemas</p>
                     <div class="w-100 bg-white text-center p-4" >
-                        <a class="btn btn-primary" href="">Make Order</a>
+                        <a class="btn btn-primary" href="">Comprar</a>
                     </div>
                 </div>
             </div>
             <div class="service-item position-relative">
-                <img class="img-fluid" src="img/service-3.jpg" alt="">
+                <img class="img-fluid" src="img/item3.jpg" alt="">
                 <div class="service-text text-center">
-                    <h4 class="text-white font-weight-medium px-3">Facial Therapy</h4>
-                    <p class="text-white px-3 mb-3">Elitr labore sit dolor erat est lorem diam sea ipsum diam dolor duo sit ipsum</p>
+                    <h4 class="text-white font-weight-medium px-3">React Native</h4>
+                    <p class="text-white px-3 mb-3">Framework de código abierto para aplicaciones móviles iOs y Android</p>
                     <div class="w-100 bg-white text-center p-4" >
-                        <a class="btn btn-primary" href="">Make Order</a>
+                        <a class="btn btn-primary" href="">Comprar</a>
                     </div>
                 </div>
             </div>
             <div class="service-item position-relative">
-                <img class="img-fluid" src="img/service-4.jpg" alt="">
+                <img class="img-fluid" src="img/item4.jpg" alt="">
                 <div class="service-text text-center">
-                    <h4 class="text-white font-weight-medium px-3">Skin Care</h4>
-                    <p class="text-white px-3 mb-3">Elitr labore sit dolor erat est lorem diam sea ipsum diam dolor duo sit ipsum</p>
+                    <h4 class="text-white font-weight-medium px-3">Git</h4>
+                    <p class="text-white px-3 mb-3">Sistema de control de versiones distribuido para rastrear cambios y colaborar.</p>
                     <div class="w-100 bg-white text-center p-4" >
-                        <a class="btn btn-primary" href="">Make Order</a>
+                        <a class="btn btn-primary" href="">Comprar</a>
                     </div>
                 </div>
             </div>
             <div class="service-item position-relative">
-                <img class="img-fluid" src="img/service-5.jpg" alt="">
+                <img class="img-fluid" src="img/item5.jpg" alt="">
                 <div class="service-text text-center">
-                    <h4 class="text-white font-weight-medium px-3">Stream Bath</h4>
-                    <p class="text-white px-3 mb-3">Elitr labore sit dolor erat est lorem diam sea ipsum diam dolor duo sit ipsum</p>
+                    <h4 class="text-white font-weight-medium px-3">Python</h4>
+                    <p class="text-white px-3 mb-3">Lenguaje de código abierto, versátil, flexible, multiplataforma, gratuito y fácil de aprender.</p>
                     <div class="w-100 bg-white text-center p-4" >
-                        <a class="btn btn-primary" href="">Make Order</a>
-                    </div>
-                </div>
-            </div>
-            <div class="service-item position-relative">
-                <img class="img-fluid" src="img/service-6.jpg" alt="">
-                <div class="service-text text-center">
-                    <h4 class="text-white font-weight-medium px-3">Face Masking</h4>
-                    <p class="text-white px-3 mb-3">Elitr labore sit dolor erat est lorem diam sea ipsum diam dolor duo sit ipsum</p>
-                    <div class="w-100 bg-white text-center p-4" >
-                        <a class="btn btn-primary" href="">Make Order</a>
+                        <a class="btn btn-primary" href="">Comprar</a>
                     </div>
                 </div>
             </div>
