--- a/krakedevpage/about.html
+++ b/krakedevpage/about.html
@@ -100,20 +100,20 @@
                     <img class="img-fluid w-100" src="img/about.jpg" alt="">
                 </div>
                 <div class="col-lg-6">
-                    <h6 class="d-inline-block text-primary text-uppercase bg-light py-1 px-2">About Us</h6>
-                    <h1 class="mb-4">Your Best Spa, Beauty & Skin Care Center</h1>
-                    <p class="pl-4 border-left border-primary">Dolores lorem lorem ipsum sit et ipsum. Sadip sea amet diam dolore sed et. Sit rebum labore sit sit ut vero no sit. Et elitr stet dolor sed sit et sed ipsum et kasd erat duo eos et erat</p>
+                    <h6 class="d-inline-block text-primary text-uppercase bg-light py-1 px-2">EXPERIENCIA</h6>
+                    <h1 class="mb-4">Tecnologías de vanguardia para el desarrollo de software</h1>
+                    <p class="pl-4 border-left border-primary">La escuela se enfoca en enseñar habilidades prácticas y aplicables al campo laboral. Además, ofrece una gran cantidad de recursos y herramientas para sus estudiantes acompñados proyectos y tareas prácticas</p>
                     <div class="row pt-3">
                         <div class="col-6">
                             <div class="bg-light text-center p-4">
-                                <h3 class="display-4 text-primary" data-toggle="counter-up">99</h3>
-                                <h6 class="text-uppercase">Spa Specialist</h6>
+                                <h3 class="display-4 text-primary" data-toggle="counter-up">25</h3>
+                                <h6 class="text-uppercase">Certificaciones</h6>
                             </div>
                         </div>
                         <div class="col-6">
                             <div class="bg-light text-center p-4">
-                                <h3 class="display-4 text-primary" data-toggle="counter-up">999</h3>
-                                <h6 class="text-uppercase">Happy Clients</h6>
+                                <h3 class="display-4 text-primary" data-toggle="counter-up">350</h3>
+                                <h6 class="text-uppercase">Estudiantes</h6>
                             </div>
                         </div>
                     </div>
@@ -129,8 +129,8 @@
         <div class="container pt-5">
             <div class="row justify-content-center text-center">
                 <div class="col-lg-6">
-                    <h6 class="d-inline-block bg-light text-primary text-uppercase py-1 px-2">Spa Specialist</h6>
-                    <h1 class="mb-5">Spa & Beauty Specialist</h1>
+                    <h6 class="d-inline-block bg-light text-primary text-uppercase py-1 px-2">EQUIPO DE TRABAJO</h6>
+                    <h1 class="mb-5">Team de profesionales</h1>
                 </div>
             </div>
             <div class="row">
@@ -139,8 +139,8 @@
                         <img class="img-fluid" src="img/team-1.jpg" alt="">
                         <div class="position-relative text-center">
                             <div class="team-text bg-primary text-white">
-                                <h5 class="text-white text-uppercase">Olivia Mia</h5>
-                                <p class="m-0">Spa & Beauty Expert</p>
+                                <h5 class="text-white text-uppercase">Andrés Marriot</h5>
+                                <p class="m-0">Analista en sistemas</p>
                             </div>
                             <div class="team-social bg-dark text-center">
                                 <a class="btn btn-outline-primary btn-square mr-2" href="#"><i class="fab fa-twitter"></i></a>
@@ -156,8 +156,8 @@
                         <img class="img-fluid" src="img/team-2.jpg" alt="">
                         <div class="position-relative text-center">
                             <div class="team-text bg-primary text-white">
-                                <h5 class="text-white text-uppercase">Cory Brown</h5>
-                                <p class="m-0">Spa & Beauty Expert</p>
+                                <h5 class="text-white text-uppercase">Carla Yusmeni</h5>
+                                <p class="m-0">Desarrolladora de software</p>
                             </div>
                             <div class="team-social bg-dark text-center">
                                 <a class="btn btn-outline-primary btn-square mr-2" href="#"><i class="fab fa-twitter"></i></a>
@@ -173,8 +173,8 @@
                         <img class="img-fluid" src="img/team-3.jpg" alt="">
                         <div class="position-relative text-center">
                             <div class="team-text bg-primary text-white">
-                                <h5 class="text-white text-uppercase">Elizabeth Ross</h5>
-                                <p class="m-0">Spa & Beauty Expert</p>
+                                <h5 class="text-white text-uppercase">Marcos Petrucci</h5>
+                                <p class="m-0">Ing. en sistemas</p>
                             </div>
                             <div class="team-social bg-dark text-center">
                                 <a class="btn btn-outline-primary btn-square mr-2" href="#"><i class="fab fa-twitter"></i></a>
@@ -190,8 +190,8 @@
                         <img class="img-fluid" src="img/team-4.jpg" alt="">
                         <div class="position-relative text-center">
                             <div class="team-text bg-primary text-white">
-                                <h5 class="text-white text-uppercase">Kelly Walke</h5>
-                                <p class="m-0">Spa & Beauty Expert</p>
+                                <h5 class="text-white text-uppercase">Kelly Guzmán</h5>
+                                <p class="m-0">Auditora contable</p>
                             </div>
                             <div class="team-social bg-dark text-center">
                                 <a class="btn btn-outline-primary btn-square mr-2" href="#"><i class="fab fa-twitter"></i></a>
@@ -214,48 +214,44 @@
             <div class="row">
                 <div class="col-lg-6 pr-lg-5 mb-5">
                     <a href="index.html" class="navbar-brand">
-                        <h1 class="mb-3 text-white"><span class="text-primary">SPA</span> Center</h1>
+                        <img src="./img/logoKrakeDev.png" alt="" class="logoKrakeDev">
                     </a>
-                    <p>Aliquyam sed elitr elitr erat sed diam ipsum eirmod eos lorem nonumy. Tempor sea ipsum diam  sed clita dolore eos dolores magna erat dolore sed stet justo et dolor.</p>
-                    <p><i class="fa fa-map-marker-alt mr-2"></i>123 Street, New York, USA</p>
-                    <p><i class="fa fa-phone-alt mr-2"></i>+012 345 67890</p>
-                    <p><i class="fa fa-envelope mr-2"></i>info@example.com</p>
+                    <p>Somos la única escuela de programación en Ecuador que ofrece un programa de estudio intensivo en Desarrollo de Software, donde en solo un año, te gradúas y aseguras trabajo con nosotros al día siguiente.</p>
+                    <p><i class="fa fa-map-marker-alt mr-2"></i>Edificio Capitalina, Iñaquito y, Juan Pablo Sanz esquina</p>
+                    <p><i class="fa fa-phone-alt mr-2"></i>+593 99 292 0306</p>
+                    <p><i class="fa fa-envelope mr-2"></i>info@clearminds-it.com</p>
                     <div class="d-flex justify-content-start mt-4">
-                        <a class="btn btn-lg btn-primary btn-lg-square mr-2" href="#"><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-lg btn-primary btn-lg-square mr-2" href="#"><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-lg btn-primary btn-lg-square mr-2" href="#"><i class="fab fa-linkedin-in"></i></a>
                         <a class="btn btn-lg btn-primary btn-lg-square" href="#"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-6 pl-lg-5">
                     <div class="row">
                         <div class="col-sm-6 mb-5">
-                            <h5 class="text-white text-uppercase mb-4">Quick Links</h5>
+                            <h5 class="text-white text-uppercase mb-4">Menú</h5>
                             <div class="d-flex flex-column justify-content-start">
-                                <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Home</a>
-                                <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>About Us</a>
-                                <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Our Services</a>
-                                <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Pricing Plan</a>
-                                <a class="text-white-50" href="#"><i class="fa fa-angle-right mr-2"></i>Contact Us</a>
+                                <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Inicio</a>
+                                <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Nosotros</a>
+                                <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Servicios</a>
                             </div>
                         </div>
                         <div class="col-sm-6 mb-5">
-                            <h5 class="text-white text-uppercase mb-4">Our Services</h5>
+                            <h5 class="text-white text-uppercase mb-4">Nuestros cursos</h5>
                             <div class="d-flex flex-column justify-content-start">
-                                <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Body Massage</a>
-                                <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Stone Therapy</a>
-                                <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Facial Therapy</a>
-                                <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Skin Care</a>
-                                <a class="text-white-50" href="#"><i class="fa fa-angle-right mr-2"></i>Nail Care</a>
+                                <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Python</a>
+                                <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Java 8</a>
+                                <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>React Native</a>
+                                <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Javascript</a>
+                                <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Git</a>
                             </div>
                         </div>
                         <div class="col-sm-12 mb-5">
-                            <h5 class="text-white text-uppercase mb-4">Newsletter</h5>
+                            <h5 class="text-white text-uppercase mb-4">Boletín</h5>
                             <div class="w-100">
                                 <div class="input-group">
-                                    <input type="text" class="form-control border-light" style="padding: 30px;" placeholder="Your Email Address">
+                                    <input type="text" class="form-control border-light" style="padding: 30px;" placeholder="Correo electrónico">
                                     <div class="input-group-append">
-                                        <button class="btn btn-primary px-4">Sign Up</button>
+                                        <button class="btn btn-primary px-4">Suscribirse</button>
                                     </div>
                                 </div>
                             </div>
@@ -269,10 +265,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 text-center text-md-left mb-3 mb-md-0">
-                    <p class="m-0 text-white">&copy; <a href="#">Your Site Name</a>. All Rights Reserved.</p>
+                    <p class="m-0 text-white">&copy; <a href="#">KrakeDev</a>. Todos los derechos reservados.</p>
                 </div>
                 <div class="col-md-6 text-center text-md-right">
-                    <p class="m-0 text-white">Designed by <a href="https://htmlcodex.com">HTML Codex</a></p>
+                    <p class="m-0 text-white">Diseñado por <a href="https://htmlcodex.com">Joel Villamar</a></p>
                 </div>
             </div>
         </div>
