Página servicios compleatada

--- a/krakedevpage/about.html
+++ b/krakedevpage/about.html
@@ -40,10 +40,10 @@
             </div>
             <div class="col-lg-6 text-right">
                 <div class="d-inline-flex align-items-center">
-                    <a class="text-primary px-2" href="">
+                    <a class="text-primary px-2" href="https://www.facebook.com/krakedev.ep" target="_blank">
                         <i class="fab fa-facebook-f"></i>
                     </a>
-                    <a class="text-primary px-2" href="">
+                    <a class="text-primary px-2" href="https://www.instagram.com/krakedev.ep/" target="_blank">
                         <i class="fab fa-instagram"></i>
                     </a>
                     <a class="text-primary pl-2" href="">
@@ -67,7 +67,7 @@
                 <div class="navbar-nav m-auto py-0">
                     <a href="index.html" class="nav-item nav-link ">Inicio</a>
                     <a href="about.html" class="nav-item nav-link active">Nosotros</a>
-                    <a href="service.html" class="nav-item nav-link">Servicios</a>
+                    <a href="service.html" class="nav-item nav-link">Cursos</a>
                     <!--<a href="price.html" class="nav-item nav-link">Pricing</a>
                     <a href="contact.html" class="nav-item nav-link">Contact</a>-->
                 </div>
@@ -81,11 +81,11 @@
     <!-- Header Start -->
     <div class="jumbotron jumbotron-fluid bg-jumbotron" style="margin-bottom: 90px;">
         <div class="container text-center py-5">
-            <h3 class="text-white display-3 mb-4">About</h3>
+            <h3 class="text-white display-3 mb-4">Acerca de nosotros</h3>
             <div class="d-inline-flex align-items-center text-white">
-                <p class="m-0"><a class="text-white" href="">Home</a></p>
+                <p class="m-0"><a class="text-white" href="">Inicio</a></p>
                 <i class="far fa-circle px-3"></i>
-                <p class="m-0">About</p>
+                <p class="m-0">Nosotros</p>
             </div>
         </div>
     </div>
@@ -221,8 +221,8 @@
                     <p><i class="fa fa-phone-alt mr-2"></i>+593 99 292 0306</p>
                     <p><i class="fa fa-envelope mr-2"></i>info@clearminds-it.com</p>
                     <div class="d-flex justify-content-start mt-4">
-                        <a class="btn btn-lg btn-primary btn-lg-square mr-2" href="#"><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-lg btn-primary btn-lg-square" href="#"><i class="fab fa-instagram"></i></a>
+                        <a class="btn btn-lg btn-primary btn-lg-square mr-2" target="_blank" href="https://www.facebook.com/krakedev.ep"><i class="fab fa-facebook-f"></i></a>
+                        <a class="btn btn-lg btn-primary btn-lg-square" href="https://www.instagram.com/krakedev.ep/" target="_blank"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-6 pl-lg-5">
