--- a/krakedevpage/index.html
+++ b/krakedevpage/index.html
@@ -40,10 +40,10 @@
             </div>
             <div class="col-lg-6 text-right">
                 <div class="d-inline-flex align-items-center">
-                    <a class="text-primary px-2" href="">
+                    <a class="text-primary px-2" href="https://www.facebook.com/krakedev.ep" target="_blank">
                         <i class="fab fa-facebook-f"></i>
                     </a>
-                    <a class="text-primary px-2" href="">
+                    <a class="text-primary px-2" href="https://www.instagram.com/krakedev.ep/" target="_blank">
                         <i class="fab fa-instagram"></i>
                     </a>
                     <a class="text-primary pl-2" href="">
@@ -67,11 +67,11 @@
                 <div class="navbar-nav m-auto py-0">
                     <a href="index.html" class="nav-item nav-link active">Inicio</a>
                     <a href="about.html" class="nav-item nav-link">Nosotros</a>
-                    <a href="service.html" class="nav-item nav-link">Servicios</a>
+                    <a href="service.html" class="nav-item nav-link">Cursos</a>
                     <!--<a href="price.html" class="nav-item nav-link">Pricing</a>
                     <a href="contact.html" class="nav-item nav-link">Contact</a>-->
                 </div>
-                <a href="" class="btn btn-primary d-none d-lg-block">Acceder</a>
+                <a href="https://aula.clearminds-it.com/courses" target="_blank" class="btn btn-primary d-none d-lg-block">Acceder</a>
             </div>
         </nav>
     </div>
@@ -424,8 +424,8 @@
                     <p><i class="fa fa-phone-alt mr-2"></i>+593 99 292 0306</p>
                     <p><i class="fa fa-envelope mr-2"></i>info@clearminds-it.com</p>
                     <div class="d-flex justify-content-start mt-4">
-                        <a class="btn btn-lg btn-primary btn-lg-square mr-2" href="#"><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-lg btn-primary btn-lg-square" href="#"><i class="fab fa-instagram"></i></a>
+                        <a class="btn btn-lg btn-primary btn-lg-square mr-2" target="_blank" href="https://www.facebook.com/krakedev.ep"><i class="fab fa-facebook-f"></i></a>
+                        <a class="btn btn-lg btn-primary btn-lg-square" href="https://www.instagram.com/krakedev.ep/" target="_blank"><i class="fab fa-instagram"></i></a>
                     </div>
                 </div>
                 <div class="col-lg-6 pl-lg-5">
