Evaluacion individual CSS

--- a/REPASO FINAL/evaluacionIndividual/orden.html
+++ b/REPASO FINAL/evaluacionIndividual/orden.html
@@ -26,11 +26,11 @@
             <div class="boxMayorMenor">
                 <div class="PersonasMayorMenor">
                     <input type="button" value="MAYOR" class="botonPrincipal" onclick="determinarMayor()">
-                    <div id="lblMayor"></div>
+                    <div id="lblMayor" class="textoCaja"></div>
                 </div>
                 <div class="PersonasMayorMenor">
                     <input type="button" value="MENOR" class="botonPrincipal" onclick="determinarMenor()">
-                    <div id="lblMenor"></div>
+                    <div id="lblMenor" class="textoCaja"></div>
                 </div>
             </div>
         </div>
